--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,11 @@
   --toastify-color-progress-bgo: 0.2;
 }
 
+:root.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
